--- a/base/Vagrantfile
+++ b/base/Vagrantfile
@@ -22,7 +22,7 @@ Vagrant.configure("2") do |config|
     # Full upgrade of the system
     base.vm.provision :shell,
       run: "always",
-      inline: "apt-get -y update && apt-get -y dist-upgrade",
+      inline: "apt-get -y update && apt-get -y dist-upgrade && apt-get update -y --fix-missing",
       privileged: true
     # Install dependencies
     base.vm.provision :shell, path: "base.sh"
