--- a/base/Vagrantfile
+++ b/base/Vagrantfile
@@ -18,6 +18,7 @@ Vagrant.configure("2") do |config|
       v.name = "base"
       v.customize ["modifyvm", :id, "--groups", "/vpn"]
       v.customize ["modifyvm", :id, "--cpus", "2"]
+      v.customize ['modifyvm', :id, '--natdnshostresolver1', 'on']
 
     end
 
